--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 kind: pipeline
 name: helm
 workspace:
-base: /
+base: "/"
 steps:
 - name: helm lint
   image: dtzar/helm-kubectl
@@ -11,34 +11,34 @@ steps:
 - name: dry run
   image: dtzar/helm-kubectl
   commands:
-  - helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --namespace: helm-test --dry-run
+  - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --namespace: helm-test --dry-run"
   - go build -o output
   - chmod +x output
 
 - name: install
   image: dtzar/helm-kubectl
   commands:
-  - helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge
-  - helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA}
+  - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge"
+  - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA}"
 
 - name: helm test
   image: dtzar/helm-kubectl
   commands:
-  - helm test ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --cleanup
+  - "helm test ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --cleanup"
 
 - name: helm update
   image: dtzar/helm-kubectl
   commands:
-  - helm update ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} .
+  - "helm update ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} ."
 
 - name: cleanup
   image: dtzar/helm-kubectl
   commands:
-  - helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge
+  - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge"
 
-- name: publish
-  image: keyporttech/chart_publisher
-  environment:
-    CHART_NAME: drone_helm_chart
-  commands:
-  - publish
+# - name: publish
+#   image: keyporttech/chart_publisher
+#   environment:
+#     CHART_NAME: drone_helm_chart
+#   commands:
+#   - publish
