--- a/.drone.yml
+++ b/.drone.yml
@@ -3,35 +3,33 @@ name: helm
 workspace:
 base: "/"
 steps:
-- name: helm lint
+- name: "helm lint"
   image: dtzar/helm-kubectl
   commands:
-  - helm lint
+  - "helm lint"
 
-- name: dry run
+- name: "dry run"
   image: dtzar/helm-kubectl
   commands:
   - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --namespace: helm-test --dry-run"
-  - go build -o output
-  - chmod +x output
 
-- name: install
+- name: "install"
   image: dtzar/helm-kubectl
   commands:
   - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge"
   - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA}"
 
-- name: helm test
+- name: "helm test"
   image: dtzar/helm-kubectl
   commands:
   - "helm test ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --cleanup"
 
-- name: helm update
+- name: "helm update"
   image: dtzar/helm-kubectl
   commands:
   - "helm update ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} ."
 
-- name: cleanup
+- name: "cleanup"
   image: dtzar/helm-kubectl
   commands:
   - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge"
