--- a/role.yaml
+++ b/role.yaml
@@ -11,8 +11,10 @@ metadata:
 rules:
   - apiGroups:
       - extensions
+      - batch
     resources:
       - deployments
+      - jobs
     verbs:
       - get
       - list
