--- a/service-account.yaml
+++ b/service-account.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "drone.serviceAccountName" . }}
+  {{- if .Values.server.env.DRONE_NAMESPACE }}
+  namespace: {{ .Values.server.env.DRONE_NAMESPACE }}
+  {{- end }}
   labels:
     app: {{ template "drone.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
