--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,8 +1,8 @@
 name: drone
 home: https://drone.io/
 icon: https://drone.io/apple-touch-icon.png
-version: 1.7.5
-appVersion: 0.8.9
+version: 1.0.0-rc.3
+appVersion: 1.0.0-rc.3
 description: Drone is a Continuous Delivery system built on container technology
 keywords:
 - continuous-delivery
