--- a/role.yaml
+++ b/role.yaml
@@ -9,7 +9,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 rules:
-  - apiGroups: [""]
+  - apiGroups: ["batch"]
     resources:
       - jobs
     verbs:
