--- a/templates/role.yaml
+++ b/templates/role.yaml
@@ -9,13 +9,14 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 rules:
-  - apiGroups:
-      - extensions
+  - apiGroups: ["batch"]
     resources:
-      - deployments
+      - jobs
     verbs:
+      - create
       - get
       - list
       - patch
       - update
+      - delete
 {{ end }}
