--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,7 @@ steps:
 - name: "helm lint"
   image: dtzar/helm-kubectl:2.12.0
   commands:
+  - "helm version"
   - "helm lint"
 
 - name: "dry run"
