--- a/.drone.yml
+++ b/.drone.yml
@@ -3,34 +3,34 @@ name: helm-check
 
 steps:
 - name: "helm lint"
-  image: dtzar/helm-kubectl:2.12.0
+  image: keyporttech/helm-builder:2.12.1
   commands:
   - "helm version"
   - "helm lint"
 
 - name: "dry run"
-  image: dtzar/helm-kubectl:2.12.0
+  image: keyporttech/helm-builder:2.12.1
   commands:
   - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --namespace: helm-test --dry-run"
 
 - name: "install"
-  image: dtzar/helm-kubectl:2.12.0
+  image: keyporttech/helm-builder:2.12.1
   commands:
   - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge"
   - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA}"
 
 - name: "helm test"
-  image: dtzar/helm-kubectl:2.12.0
+  image: keyporttech/helm-builder:2.12.1
   commands:
   - "helm test ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --cleanup"
 
 - name: "helm update"
-  image: dtzar/helm-kubectl
+  image: keyporttech/helm-builder:2.12.1
   commands:
   - "helm update ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} ."
 
 - name: "cleanup"
-  image: dtzar/helm-kubectl:2.12.0
+  image: keyporttech/helm-builder:2.12.1
   commands:
   - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --purge"
 
