--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,7 @@ steps:
 - name: "helm lint"
   image: keyporttech/helm-builder:2.12.1
   commands:
+  - "kubectl proxy"
   - "helm version"
   - "helm lint"
 
