--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ steps:
 - name: "helm lint"
   image: keyporttech/helm-builder:2.12.1-1
   commands:
-  - "la -lA /var/run/secrets/kubernetes.io/serviceaccount"
+  - "ls -lA /var/run/secrets/kubernetes.io/serviceaccount"
   - "env"
   - "helm version"
   - "helm lint"
