--- a/.drone.yml
+++ b/.drone.yml
@@ -6,8 +6,10 @@ steps:
   image: keyporttech/helm-builder:2.12.1-1
   volumes:
   - name: kubernetes-secrets
-    path: /var/run/secrets/kubernetes.io
+    path: /var/run/secrets/kubernetes.io/serviceaccount
   commands:
+  - "echo $KUBE_API_TOKEN >/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
+  - "echo $CA_CRT >/var/run/secrets/kubernetes.io/serviceaccount/token"
   - "ls -lA /var/run/secrets/kubernetes.io/serviceaccount"
   - "env"
   - "helm version"
@@ -45,3 +47,6 @@ steps:
 #     CHART_NAME: drone_helm_chart
 #   commands:
 #   - publish
+volumes:
+- name: kubernetes-secrets
+  temp: {}
