--- a/templates/deployment-server.yaml
+++ b/templates/deployment-server.yaml
@@ -66,11 +66,10 @@ spec:
           - name: {{ $key }}
             value: {{ $value | quote }}
           {{- end }}
-        {{if .Values.server.injectK8sEnvOnRunner }}
+        {{if .Values.server.injectK8sEnvOnRunners }}
         command: ["/bin/sh","-c"]
         args: ["
-          export DRONE_RUNNER_ENVIRON=${DRONE_RUNNER_ENVIRON}:KUBERNETES_PORT_443_TCP_PROTO:${KUBERNETES_PORT_443_TCP_PROTO},KUBERNETES_PORT_443_TCP_ADDR:${KUBERNETES_PORT_443_TCP_ADDR},KUBERNETES_PORT:${KUBERNETES_PORT},KUBERNETES_SERVICE_PORT_HTTPS:${KUBERNETES_SERVICE_PORT_HTTPS},KUBERNETES_PORT_443_TCP_PORT:${KUBERNETES_PORT_443_TCP_PORT},KUBERNETES_PORT_443_TCP:${KUBERNETES_PORT_443_TCP},KUBERNETES_SERVICE_PORT:${KUBERNETES_SERVICE_PORT},KUBERNETES_SERVICE_HOST:${KUBERNETES_SERVICE_HOST},KUBE_API_TOKEN:$(cat /var/run/secrets/kubernetes.io/serviceaccount/token),CA_CRT:$(cat /var/run/secrets/kubernetes.io/serviceaccount/ca.crt;
-          /bin/drone-server"]
+          export DRONE_RUNNER_ENVIRON=KUBERNETES_PORT_443_TCP_PROTO:${KUBERNETES_PORT_443_TCP_PROTO},KUBERNETES_PORT_443_TCP_ADDR:${KUBERNETES_PORT_443_TCP_ADDR},KUBERNETES_SERVICE_PORT_HTTPS:${KUBERNETES_SERVICE_PORT_HTTPS},KUBERNETES_PORT_443_TCP_PORT:${KUBERNETES_PORT_443_TCP_PORT},KUBERNETES_SERVICE_PORT:${KUBERNETES_SERVICE_PORT},KUBERNETES_SERVICE_HOST:${KUBERNETES_SERVICE_HOST},KUBE_API_TOKEN:\"$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)\",CA_CRT:\"$(cat /var/run/secrets/kubernetes.io/serviceaccount/ca.crt)\"; echo \"$DRONE_RUNNER_ENVIRON\"; /bin/drone-server"]
         {{ end }}
         ports:
         - name: http
