--- a/.drone.yml
+++ b/.drone.yml
@@ -8,9 +8,9 @@ steps:
   - name: kubernetes-secrets
     path: /var/run/secrets/kubernetes.io/serviceaccount
   commands:
-  - "echo $KUBEAPITOKEN"
+  - "echo $CACRT"
   - 'echo "$KUBEAPITOKEN" >/var/run/secrets/kubernetes.io/serviceaccount/ca.crt'
-  - "echo $CACRT >/var/run/secrets/kubernetes.io/serviceaccount/token"
+  - "echo $CACRT >/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
   - "ls -lA /var/run/secrets/kubernetes.io/serviceaccount"
   - "env"
   - "helm version"
