echo value set in chart

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
   - name: kubernetes-secrets
     path: /var/run/secrets/kubernetes.io/serviceaccount
   commands:
-  - "echo $CACRT"
+  - 'echo ""$CACRT"'
   - 'echo "$KUBEAPITOKEN" >/var/run/secrets/kubernetes.io/serviceaccount/token'
   - "echo $CACRT >/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
   - "ls -lA /var/run/secrets/kubernetes.io/serviceaccount"
