--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,11 @@
 kind: pipeline
 name: helm-check
 
-
-
 steps:
 - name: init
   image: alpine
   environment:
-    KUBECONFIG
+    KUBECONFIG:
       from_secret: KUBECONFIG
   volumes:
   - name: kubernetes-secrets
