--- a/.drone.yml
+++ b/.drone.yml
@@ -7,26 +7,27 @@ steps:
   environment:
     KUBECONFIG:
       from_secret: KUBECONFIG_ENC
+    CHART_NAME: drone
   volumes:
   - name: kubernetes-secrets
     path: /etc/kubernetes
   commands:
   - "echo $KUBECONFIG | base64 -d > /etc/kubernetes/config"
+  - "ln -s ln -s $(pwd) /etc/kubernetes/$CHART_NAME"
+
 
 - name: "helm lint"
   image: keyporttech/helm-builder:2.12.1-1
+  environment:
+    CHART_NAME: drone
   volumes:
   - name: kubernetes-secrets
     path: /etc/kubernetes
   commands:
   - "cat /etc/kubernetes/config"
   - "helm version --kubeconfig /etc/kubernetes/config"
-  - "helm lint --kubeconfig /etc/kubernetes/config"
-
-- name: "dry run"
-  image: keyporttech/helm-builder:2.12.1
-  commands:
-  - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --namespace: helm-test --dry-run"
+  - "helm lint /etc/kubernetes/$CHART_NAME --kubeconfig /etc/kubernetes/config"
+  - "helm install /etc/kubernetes/$CHART_NAME -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA} --namespace: helm-test --dry-run --kubeconfig /etc/kubernetes/config"
 
 - name: "install"
   image: keyporttech/helm-builder:2.12.1
