--- a/.drone.yml
+++ b/.drone.yml
@@ -14,8 +14,9 @@ steps:
   commands:
   - "echo $KUBECONFIG | base64 -d > /etc/kubernetes/config"
   - "ln -s $(pwd) /etc/kubernetes/$CHART_NAME"
+  - echo "${DRONE_REPO_NAME}-$(openssl rand -hex 12)" > /etc/kubernetes/chartname
   ## delete existing deployment if exists
-  - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA:0:16} --purge --kubeconfig /etc/kubernetes/config | :"
+  - "helm delete $(cat /etc/kubernetes/chartname) --purge --kubeconfig /etc/kubernetes/config | :"
 
 - name: "helm lint and dry run"
   image: keyporttech/helm-builder:2.12.1-1
@@ -27,7 +28,7 @@ steps:
   commands:
   - "helm version --kubeconfig /etc/kubernetes/config"
   - "helm lint /etc/kubernetes/$CHART_NAME --kubeconfig /etc/kubernetes/config"
-  - "helm install /etc/kubernetes/$CHART_NAME -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA:0:16} --namespace helm-test --dry-run --kubeconfig /etc/kubernetes/config"
+  - "helm install /etc/kubernetes/$CHART_NAME -n  $(cat /etc/kubernetes/chartname) --namespace helm-test --dry-run --kubeconfig /etc/kubernetes/config"
 
 - name: "verify install/update and test"
   image: keyporttech/helm-builder:2.12.1
@@ -37,15 +38,15 @@ steps:
   - name: kubernetes-secrets
     path: /etc/kubernetes
   commands:
-  - "helm install . -n ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA:0:16} --kubeconfig /etc/kubernetes/config"
+  - "helm install . -n  $(cat /etc/kubernetes/chartname) --kubeconfig /etc/kubernetes/config"
   - "sleep 5"
-  - "helm test ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA:0:16} --cleanup --kubeconfig /etc/kubernetes/config"
-  - "helm update ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA:0:16} ."
+  - "helm test  $(cat /etc/kubernetes/chartname) --cleanup --kubeconfig /etc/kubernetes/config"
+  - "helm update  $(cat /etc/kubernetes/chartname) ."
 
 - name: "cleanup"
   image: keyporttech/helm-builder:2.12.1
   commands:
-  - "helm delete ${DRONE_REPO_NAME}-${DRONE_COMMIT_SHA:0:16} --purge"
+  - "helm delete $(cat /etc/kubernetes/chartname) --purge"
 
 # - name: publish
 #   image: keyporttech/chart_publisher
