--- a/drone-cluster-role.yaml
+++ b/drone-cluster-role.yaml
@@ -5,9 +5,14 @@ metadata:
 subjects:
   - kind: ServiceAccount
     # Reference to upper's `metadata.name`
-    name: default
+    name: drone-drone
     # Reference to upper's `metadata.namespace`
     namespace: tools
+  - kind: ServiceAccount
+    # Reference to upper's `metadata.name`
+    name: default
+    # Reference to upper's `metadata.namespace`
+    namespace: default
 roleRef:
   kind: ClusterRole
   name: cluster-admin
