--- a/drone-cluster-role.yaml
+++ b/drone-cluster-role.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: drone-runner
+  namespace: tools
+---
+
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -5,14 +12,14 @@ metadata:
 subjects:
   - kind: ServiceAccount
     # Reference to upper's `metadata.name`
-    name: drone-drone
+    name: drone-runner
     # Reference to upper's `metadata.namespace`
     namespace: tools
   - kind: ServiceAccount
     # Reference to upper's `metadata.name`
     name: default
     # Reference to upper's `metadata.namespace`
-    namespace: default
+    namespace: tools
 roleRef:
   kind: ClusterRole
   name: cluster-admin
