--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -1,4 +1,3 @@
-{{- if (not .Values.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,7 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{- range $key, $value := .Values.server.envSecrets }}
-  {{ $key }}: {{ $value | b64enc }}
-  {{- end }}
+{{ if .Values.secretKey }}
+  secretKey:  {{ .Values.secretKey | b64enc | quote }}
+{{ else }}
+  secretKey: {{ randAlphaNum 16 | b64enc | quote }}
 {{ end }}
